try more and invis on load fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Random Collectibles Order</title>
     <link rel="icon" type="image/png" href="/img/power_cell_red.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body">
 
