--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Collectibles Order</title>
-    <link rel="icon" type="image/png" href="/img/power_cell_red.png">
+    <link rel="icon" type="image/png" href="img/power_cell_red.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css?v=2">
 </head>
